# WebSideloadApp

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.fullstack  LICENSE  PROJECT_NOTICE.md  QUICK_REFERENCE.md  README.md  README.zh.md  README_EN.md  docker-compose.yml  nginx.conf  package.json
.github/scripts/: FIX_BACKTICK_ISSUE.md  README.md  REFACTORING_NOTES.md  generate-deployment-docs.sh  generate-release-body.sh  test-all-scripts.sh  test-generate-release-body.sh
.github/templates/: CUSTOM_DOMAIN_GUIDE.md.template  DEPLOYMENT.md.template  DEPLOYMENT_OPTIONS.md.template  README_ACTIONS_FLOW.md  README_DEPLOYMENT.md.template  STRUCTURE_OPTIMIZATION.md.template
.github/workflows/: docker-publish.yml  release-build.yml
backend/: README.md  README_EN.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
backend/src/: index.ts
dependencies/webmuxd/: README.md  README_EN.md  package.json  tsconfig.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  anisette-libcurl-http.ts  anisette-libcurl-init.ts  anisette-service.ts  apple-signing.ts  main.ts  main.tsx  node-forge.d.ts  style.css  vite-env.d.ts  webmuxd-browser.d.ts  (+2 more)
scripts/: build-wasm-libcurl.sh  build-wasm-openssl.sh  build-wasm-zsign.sh  wasm-common.sh
src/: webmuxd.ts
tls/openssl-wasm/: Cargo.toml  build.rs  build.sh
tls/openssl-wasm/pkg/: openssl_wasm.d.ts
tls/openssl-wasm/src/: lib.rs
(+87 files in other folders)
