[package]
name = "openssl-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1"

[dependencies]
js-sys = "0.3"
openssl = "0.10.75"
openssl-sys = { path = "vendor/openssl-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }

[patch.crates-io]
openssl-sys = { path = "vendor/openssl-sys" }
libc = { path = "vendor/libc-shim" }
